Add Spotless and curated Error Prone checks